--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "data-explorer",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
+    "airtable": "^0.12.2",
+    "html2canvas": "^1.4.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-scripts": "5.0.1"
