updated design and insight

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,8 @@ jobs:
           REACT_APP_AIRTABLE_TABLE_NAME_Departments: ${{ secrets.REACT_APP_AIRTABLE_TABLE_NAME_DEPARTMENTS }}
           REACT_APP_AIRTABLE_TABLE_NAME_Questions: ${{ secrets.REACT_APP_AIRTABLE_TABLE_NAME_QUESTIONS }}
           REACT_APP_AIRTABLE_TABLE_NAME_Insight: ${{ secrets.REACT_APP_AIRTABLE_TABLE_NAME_INSIGHT }}
+          REACT_APP_AIRTABLE_TABLE_NAME_Sensemakers: ${{ secrets.REACT_APP_AIRTABLE_TABLE_NAME_SENSEMAKERS }}
+          REACT_APP_AIRTABLE_TABLE_NAME_CommentAnnotations: ${{ secrets.REACT_APP_AIRTABLE_TABLE_NAME_COMMENTANNOTATIONS }}
           REACT_APP_ACCESS_PASSWORD: ${{ secrets.REACT_APP_ACCESS_PASSWORD }}
         run: npm run build
       
