--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,11 +27,9 @@ jobs:
           node-version: '18'
       
       - name: Install dependencies
-        working-directory: ./data-explorer
         run: npm ci
       
       - name: Build app
-        working-directory: ./data-explorer
         env:
           REACT_APP_AIRTABLE_API_KEY: ${{ secrets.REACT_APP_AIRTABLE_API_KEY }}
           REACT_APP_AIRTABLE_BASE_ID: ${{ secrets.REACT_APP_AIRTABLE_BASE_ID }}
@@ -52,7 +50,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './data-explorer/build'
+          path: './build'
       
       - name: Deploy to GitHub Pages
         id: deployment
