--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,20 +3,21 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # or master, depending on your default branch
+      - main
+  workflow_dispatch:
 
 permissions:
   contents: read
   pages: write
   id-token: write
 
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
-    environment:
-      name: airtable_keys_password
-      url: ${{ steps.deployment.outputs.page_url }}
-    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -25,6 +26,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
+          cache: 'npm'
       
       - name: Install dependencies
         run: npm ci
@@ -52,7 +54,14 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: './build'
-      
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
